<resources>
    <string name="app_name">Oblepiha SNT</string>
    <string name="checker_channel_description">Checker channel</string>
    <string name="defence_state_change_channel_description">Defence state channel</string>
    <string name="alert_received_channel_description">Received alerts</string>
    <string name="defence_disabled">Defence is disabled</string>
    <string name="defence_enabled">Defence is enabled</string>
    <string name="defence_state_changed_title">Defence state changed</string>
    <string name="alert_accepted_message">Accept</string>
    <string name="call_security_message">Call security</string>
    <string name="test_message" translatable="false">test</string>
    <string name="alert_icon_desc" translatable="false">alert icon</string>
    <string name="title_activity_content">MainActivity</string>
    <string name="defence_state_label">Total</string>
    <string name="power_state_label">Power</string>
    <string name="preferences_label">Preferences</string>
    <string name="login_label">Login</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">pass</string>
    <string name="action_sign_in">Log in</string>
    <string name="login_hint">Your login</string>
    <string name="password_hint">Your password</string>
    <string name="log_in_btn_text">Log in</string>
    <string name="login_required_message">Login required!</string>
    <string name="pass_required_message">Password required!</string>
    <string name="login_error_message">Can\'t login, try again</string>
    <string name="disable_dose_dialog_title">Disable Dose</string>
    <string name="disable_dose_dialog_message">For correct app use, please, disable dose mode</string>
    <string name="logout_btn">Logout button</string>
    <string name="logout_confirm_title">Logout confirm</string>
    <string name="ok">OK</string>
    <string name="logout_dialog_body_message">Sure log out?</string>
    <string name="cancel">No</string>
    <string name="fab" translatable="false">fab</string>
    <string name="temp_value" translatable="false">" %d°C\""</string>
    <string name="title_power_data">%s kWt*H</string>
    <string name="contact_locked_message">Contact is locked</string>
    <string name="contact_unlocked_message">Contact is unlocked</string>
    <string name="message_alert_disabled">Alert is disabled</string>
    <string name="message_alert_enabled">Alert enabled</string>
    <string name="message_enabling_alert">Defence will be enabled</string>
    <string name="message_disabling_alert">Defence will be disabled</string>
    <string name="waiting_dialog_title">Please, wait</string>
    <string name="loading_dialog_message">data is loading</string>
    <string name="spend_for_month_title">Spend for month:</string>
    <string name="spend_for_day_title">Spend for day:</string>
    <string name="accruals_label">Accruals</string>
    <string name="bills_label">Bills</string>
    <string name="power_title">Power</string>
    <string name="membership_title">Membership</string>
    <string name="target_title">Target</string>
    <string name="total_duty_title">Total duty</string>
    <string name="backup_title">Backup</string>
    <string name="restore_title">Restore</string>
    <string name="select_backup_folder_pref">select backup folder</string>
    <string name="select_backup_file_message">select backup file</string>
    <string name="accruals_power_label">Power accruals</string>
    <string name="accruals_power_details_label">Power details</string>
    <string name="start_data_label">Start data</string>
    <string name="finish_data_label">Finish data</string>
    <string name="difference_data_label">Used</string>
    <string name="in_limit_data_label">Used in limit</string>
    <string name="in_limit_data_cost_label">Limit cost</string>
    <string name="over_limit_data_label">Over limit</string>
    <string name="over_limit_data_cost_label">Over limit cost</string>
    <string name="total_cost_label">Total cost</string>
    <string name="payed_label">Paid</string>
    <string name="accruals_membership_label">Accruals membership</string>
    <string name="fixed_cost_label">Fixed cost</string>
    <string name="square_cost_label">Square cost</string>
    <string name="square_label">Square</string>
    <string name="accruals_membership_details_label">Membership details</string>
    <string name="accruals_target_details_label">Target details</string>
    <string name="accruals_target_label">Accruals target</string>
    <string name="unpayed_bills_title">Unpayed bills</string>
    <string name="payed_bills_title">Paid bills</string>
    <string name="bills_list_label">Bills list</string>
    <string name="bill_title">Bill</string>
    <string name="bill_details_label">Bill details</string>
    <string name="accrued_label">Accrued</string>
    <string name="created_at_label">Created at</string>
    <string name="bill_content_title">Bill content</string>
    <string name="pays_title">Pays for bill</string>
    <string name="from_deposit_label">From deposit</string>
    <string name="to_deposit_label">To deposit</string>
    <string name="discount_label">Discount</string>
    <string name="kw_template">%.3f kWt</string>
    <string name="ruble_template">%.2f rub</string>
    <string name="load_qr_code">load QR code</string>
    <string name="kw">" kWt"</string>
    <string name="rub">rub</string>
    <string name="pays_label">Pays:</string>
    <string name="meter">" m."</string>
    <string name="bill_prefix">"Bill "</string>
    <string name="depisit_incerase_title">Deposit +%s</string>
    <string name="deposit_decreese_titile">Deposit -%s</string>
    <string name="suburban_to_city_title">Suburban to city</string>
    <string name="suburban_from_city_title">Suburban from city</string>
    <string name="suburbans_label">Suburbans</string>
    <string name="file_load_channel">File load</string>
    <string name="file_loading_title">Loading fine</string>
    <string name="file_loading_body">File will be loaded</string>
    <string name="permissions_dialog_title">Permissions required</string>
    <string name="permissions_dialog_positive_answer">Accept</string>
    <string name="permissions_dialog_negative_answer">Descline</string>
    <string name="file_permissons_not_granted">Permissions not granded</string>
    <string name="share_file_menu_item">Share file</string>
    <string name="re_download_file">Download file again</string>
    <string name="menu_btn_title">menu btn</string>
    <string name="download_file">Download</string>
    <string name="bill_invoice_title">Bill invoice</string>
    <string name="no_connection_title">No connection</string>
    <string name="retry_title">Retry</string>
    <string name="go_to_today_btn">this month</string>
    <string name="arrow_left_cd" translatable="false">previous month</string>
    <string name="arrow_right_cd" translatable="false">next month</string>
    <string name="open_gates_title">Open gates</string>
    <string name="server_update_time">Server info update time</string>
    <string name="update_time_information_label">Update information time: %s</string>
    <string name="show_data_transfers_message">Show data transfers</string>
    <string name="spended_electicity_message">Accruals from %s to %s
Spend: %s
On sum %s
Spend for month: %s
Month sum: %s</string>
    <string name="notifications_title">Notifications</string>
    <string name="notification_type_badge">notification_type_badge</string>
    <string name="close_title">Close</string>
    <string name="mark_as_read_titile">Mark as read</string>
    <string name="wrong_request_message">Can\'t do request, try later!</string>
    <string name="delete_message">Delete</string>
    <string name="notification_read_message">Read</string>
    <string name="notification_deleted_message">Deleted</string>
    <string name="mark_messages_read_menu">Mark all messages as read</string>
    <string name="show_bill_info_message">Show bill info</string>
    <string name="show_power_use">Show power use</string>
    <string name="no_messages_found_message">No messages found</string>
    <string name="no_data_found_message">No data found</string>
</resources>